# Ironmind

./: Cargo.toml  LICENSE  README.md  sample.bf  snapcraft.yaml
src/: main.rs  tests.rs
src/interpreter/: mod.rs
src/parser/: mod.rs
src/tests/: 99_bottles_of_beer.bf  expected_output.txt  mod.rs
src/turing_machine/: mod.rs
src/visualize/: mod.rs
