[package]
name = "ironmind"
version = "0.1.4"
edition = "2021"
authors = ["Jaden Arceneaux <contact@jadenarceneaux.com>"]
description = "A Brainf*ck interpreter built in Rust"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jadens-arc/Iron-Mind"
keywords = ["BrainFuck"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
