[package]
name = "ironmind"
version = "0.3.11"
edition = "2021"
authors = ["Jaden Arceneaux <contact@jadenarceneaux.com>"]
description = "A Brainf*ck interpreter built in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jadens-arc/Ironmind"
keywords = ["BrainFuck"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
cursive = "0.20.0"
